# Multiplicacao-de-matriz

./: CMakeLists.txt  LICENSE  README.md  Resultado da execução
src/: Main.c  concorrente.c  concorrente.h  matriz_exe  sequencial.c  sequencial.h
